numbat/tests/snapshots/prelude_and_examples__name_resolution_error_snapshots@reserved_identifier_2.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/name_resolution_error/reserved_identifier_2.nbt
---
error: reserved identifier may not be used
  ┌─ <internal:3>:1:6
  │
1 │ unit ans
  │      ^^^ reserved identifier
